# zfabric

./: .gitignore  .gitmodules  README.md  app.py  pyproject.toml  requirements.txt  zfabric
chrome_extension/: config.html  config.js  manifest.json  popup.html  popup.js
client/: zfabric
client/tools/: yt.py
examples/: config.json  config.yaml  hu.kzoltan.zfabric.plist  mac_service.sh  zfabric.service
server/: __init__.py  api_server.py  config.py  decorators.py  generator.py  helpers.py  models.py  requirements.txt  routes.py  server.py  services.py  session_manager.py  variable_handler.py
server/agents/: mindmap.py  test.py
server/examples/: config.json  fabric.service  hu.kzoltan.zfabric.plist  stop_server.sh
server/lib/: lc.py
server/lib/.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _heapq.data.json  _heapq.meta.json  _markupbase.data.json  _markupbase.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  (+217 more)
server/patterns/answer/: system.md
server/patterns/extract_answer/: system.md
server/patterns/extract_chapters/: system.md
server/patterns/summarize/: system.md
server/patterns/take_notes/: config.json  system.md
tools/: content_extract.py  yt.py
tools/extract/: confluence.py  reddit.py  web.py  yt.py
tools/save/: joplin.py
(+3680 files in other folders)
